# precision-feedback-pipeline

./: .env  .env.dev  .env.devexample  .env.local  .env.mvc  .env.remote  .gitignore  Dockerfile  ES1.json  E_S.json  LDT.py  README.md  TP.json  bump_version.py  changelog.md  combined_causal.json  cs1.json  esteemer.py  graph_operations.py  input_message.json  load.py  main.py  main311.py  main_windows.py  mvcdev.env  output_message.json  pyproject.toml  requirements-generated.txt  requirements.txt  requirements_poetrygenerate.txt  restrictor.py  score.py  settings.py  startup_functions.py  wget-log
Leakdown Tester/: MpogData_Real.csv  leakTester.py
LeakdownTester/: LDT.py  LDT_Addendum.py  changelog.md  leakTester.py  readme.md
bit_stomach/: acheivement_loss_annotate.py  bit_stomach.py  consecutive_gap_annotate.py  gap_annotate.py  monotinicity_annotate.py  prepare_data_annotate.py  student_t_cleaner.py  trend_annotate.py
bit_stomach/tests/: test_trend_annotate.py
bitstomach/: bitstomach.py
bitstomach/signals/: __init__.py  _achievement.py  _approach.py  _comparison.py  _loss.py  _trend.py
bitstomach2/: __init__.py  bitstomach.py  comparison_annotation.py
bitstomach2/signals/: __init__.py  _comparison copy.py  _comparison.py  _trend.py
bulk-up/: README.md  pyproject.toml
bulk-up/src/bulk_up/: dataset_to_inputs.py  futures_example.py  history.py  history_extractor.py  log_to_data.py  log_to_inputs.py  log_to_reports.py  main.py  req.py  stats.py
candidate_pudding/: candidate_pudding.py
candidatesmasher/: candidatesmasher.py
esteemer/: README.md  esteemer.ipynb  esteemer.py  esteemr_test.py  process_history.ipynb  process_history.py  utils.py
esteemer/signals/: __init__.py  _history.py
esteemer2/: README.md  esteemer2.py  utils.py
outputs/: spek_bs.json  spek_cs.json  spek_es.json  spek_tp.json
pictoralist/: pictochat.py  pictoralist.py  pictoralist_V1.py
startup/: .gitignore  causal_pathways.json  causal_pathways_alice.json  input_message_demo.json  lost_top_10_benchmark.json  measure_details.json  measures.json  message_code.json  social_loss_templates.json  templates.json  templates1.json  templates_alice.json
startup/causal_pathways/: goal_approach.json  goal_gain.json  goal_loss.json  improving.json  social_approach.json  social_gain.json  social_loss.json  social_worse.json  worsening.json
startup/goal_better/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/goal_gain/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/goal_loss/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/goal_worse/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/social_better/: input_message_alice.json  input_message_alice_peer_average.json  input_message_alice_top10_average.json  input_message_alice_top25_average.json  input_message_bob.json  templates.json
startup/social_gain/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/social_loss/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/social_worse/: causal_pathways.json  input_message_alice.json  input_message_bob.json  templates.json
startup/templates/: achieved_peer_average.json  achieved_top_10_peer_benchmark.json  achieved_top_25_peer_benchmark.json  approach_goal.json  approach_peer_average.json  approach_top_10_peer_benchmark.json  approach_top_25_peer_benchmark.json  congrats_improved_performance.json  consistently_high_performance.json  drop_below_goal.json  drop_below_peer_average.json  getting_worse.json  in_top_25%.json  lost_peer_average.json  lost_top_10_benchmark.json  no_longer_top_performer.json  not_top_performer.json  performance_dropped.json  performance_improving.json  reached_goal.json  remain_low_performance.json  top_10_performer.json  top_25_performer.json  top_performer.json
test_cases/data_flow_sets/: input_message_1.json  input_message_2.json  readme.md
test_cases/pathway_specific/: cptest_goal_gain.json  cptest_goal_loss.json  cptest_social_approach.json  cptest_social_better.json  cptest_social_gain.json  cptest_social_loss.json  (+2 more)
tests/: input_message.json  spek_st.json  spek_tp.json  test_candidate_pudding.py  test_esteemer.py  test_history.py  test_utils.py
thinkpudding/: insert.py  load.py  thinkpudding.py
utils/: __init__.py  graph_operations.py  settings.py
(+46 files in other folders)
