[tool.poetry]
name = "pfp-api"
version = "0.5.0a1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "pfp_api"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
gunicorn = "20.1.0"
fastapi = "^0.110.0"
rdflib = "^6.2.0"
pandas = "^1.5.3"
rdfpandas = "^1.1.5"
scipy = "1.10.0"
matplotlib = "3.6.1"
numpy = "1.23.2"
requests_file = "1.5.1"
python-decouple = "^3.8"
loguru = "^0.7.2"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
pytest = "^8.0.0"
python-slugify = "^8.0.4"
decoy = "^2.1.1"
ruff = "^0.3.5"
poethepoet = "^0.25.0"
poetry-git-version-plugin = "^1.0.8"

[tool.poetry-git-version-plugin]
version_format = 'v{version}+{distance}'

[tool.ruff.lint]
extend-select = ["I", "C901"] # sort imports 
mccabe.max-complexity = 5

[tool.poe.tasks]
ruff = [{ cmd = "ruff check --fix --exit-zero" }, { cmd = "ruff format" }]
pre = ["ruff",{cmd = "poetry set-git-version"} ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
