[tool.poetry]
name = "bulk-up"
version = "0.1.0"
description = ""
authors = ["pboisver <pboisver@umich.edu>"]
readme = "README.md"
packages = [{include = "bulk_up", from = "src"}]

[tool.poetry.scripts]
bulk-up = "bulk_up.main:app"

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^2.29.0"
requests = "^2.31.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
rdflib = "^7.0.0"
pyyaml = "^6.0.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"
poethepoet = "^0.26.1"

[tool.ruff.lint]
extend-select = ["I", "C901"] # sort imports 
mccabe.max-complexity = 5

[tool.poe.tasks]
ruff = [{ cmd = "ruff check --fix-only" }, { cmd = "ruff format" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
